# rideshare-gym

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: claude_baseline.py  gold_oracle.py  litellm_agent.py  trained_local.py
agents/prompts/: rideshare_system.md
analysis/: STATS_PLAN.md  before_after_curves.py  compare_runs.py  failure_dashboard.py  format_report.py  stats.py  test_failure_report.json
docker/rideshare-mock/: Dockerfile
docker/toxiproxy/: toxiproxy.json
eval/: compare_checkpoints.py  error_taxonomy.py  list_models.py  run.py  scorecard.py
src/rideshare_gym/: __init__.py  rideshare_sandbox.py  tools.py
src/rideshare_gym/core/: __init__.py  adversarial.py  env.py  recorder.py  sandbox.py  task.py  tools.py  types.py  verifier.py
src/rideshare_gym/mock_server/: __init__.py  app.py  perturbations.py  seed.py  store.py
src/rideshare_gym/mock_server/routers/: admin.py  disputes.py  drivers.py  fraud.py  lost_items.py  marketplace.py  messaging.py  pricing.py  refunds.py  riders.py  safety.py  trips.py
src/rideshare_gym/tasks/: __init__.py  _base.py  accident_incident_response.py  account_takeover_response.py  coordinated_fraud_response.py  driver_pay_dispute.py  event_surge_planning.py  fraud_ring_detection.py  lost_item_recovery.py  match_single_ride.py  realtime_dispatch_window.py  refund_cancelled_trip.py  surge_demand_spike.py  verify_driver_documents.py
src/rideshare_gym/world/: __init__.py  city.py  clock.py  demand.py  drivers.py  events.py  fraud_engine.py  matching.py  pricing.py  riders.py  surge.py  trips.py  world.py
tests/analysis/: test_stats.py
tests/integration/: test_mock_server.py
tests/tasks/: test_gold_oracle_all_tasks.py
tests/training/: test_data_converters.py
tests/unit/: test_recorder.py  test_tools.py  test_verifier.py
tests/world/: test_city.py  test_fraud_engine.py  test_pricing.py  test_world.py
training/: README.md  __init__.py  eval_callback.py  reward.py
training/data/: __init__.py  failure_miner.py  trajectory_to_dpo.py  trajectory_to_grpo.py  trajectory_to_sft.py
training/recipes/: __init__.py  recipe_01_sft.py  recipe_02_dpo.py  recipe_03_grpo.py
training/slurm/: README.md  submit_baseline_eval.sbatch  submit_baseline_stats.sbatch  submit_collect_rollouts.sbatch  submit_dpo.sbatch  submit_full_pipeline_with_stats.sbatch  submit_grpo.sbatch  submit_sft.sbatch  submit_trained_stats.sbatch
ui/: app.py
