[project]
name = "rideshare-gym"
version = "0.1.0"
description = "Real-time ride-sharing operations RL gym for LLM tool-calling agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "gymnasium>=1.0.0",
    "pydantic>=2.7.0",
    "jsonschema>=4.23.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "faker>=30.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "vcrpy>=6.0.0",
]
training = [
    # Heavy CUDA-side deps for fine-tuning Qwen2.5-7B on A100 (Longleaf).
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "bitsandbytes>=0.43.0",
    "sentencepiece>=0.2.0",
    "wandb>=0.18.0",
]

[project.scripts]
rideshare-gym-eval = "eval.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rideshare_gym"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: requires running mock server (docker compose up)",
    "slow: tasks that take >30s (e.g. realtime_dispatch_window)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true
